chore: add global pullPolicy default

--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -19,7 +19,7 @@ global:
     deploy: true
   image:
     pullSecrets: []
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
 
 sysdig:
   # Required: You need your Sysdig access key before running agents, either specifying 'accessKey' here, or using 'existingAccessKeySecret'
