--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -17,6 +17,9 @@ global:
   proxy: {}
   kspm:
     deploy: true
+  image:
+    pullSecrets: []
+    pullPolicy: IfNotPresent
 
 sysdig:
   # Required: You need your Sysdig access key before running agents, either specifying 'accessKey' here, or using 'existingAccessKeySecret'
@@ -42,7 +45,7 @@ image:
   tag: 1.24.0
   digest:
   registry: quay.io
-  pullPolicy: Always
+  pullPolicy:
 
 # Set image pull secret name
 # Example
