--- a/charts/node-analyzer/templates/runtimeScanner/eveconnector-api-deployment.yaml
+++ b/charts/node-analyzer/templates/runtimeScanner/eveconnector-api-deployment.yaml
@@ -34,7 +34,7 @@ spec:
       containers:
       - name: {{ include "nodeAnalyzer.name" . }}-eveconnector-api
         image: {{ template "nodeAnalyzer.image.eveConnector" . }}
-        imagePullPolicy: {{ .Values.nodeAnalyzer.runtimeScanner.eveConnector.image.pullPolicy }}
+        imagePullPolicy: {{ .Values.nodeAnalyzer.runtimeScanner.eveConnector.image.pullPolicy | default .Values.global.image.pullPolicy }}
         ports:
           - name: api
             containerPort: 7000
