--- a/charts/rapid-response/templates/daemonset.yaml
+++ b/charts/rapid-response/templates/daemonset.yaml
@@ -59,12 +59,15 @@ spec:
       {{- end }}
       {{- if .Values.rapidResponse.imagePullSecrets }}
       imagePullSecrets:
-{{ toYaml .Values.rapidResponse.imagePullSecrets | indent 8 }}
+        {{- toYaml .Values.rapidResponse.imagePullSecrets | nindent 8 }}
+      {{- else if .Values.global.image.pullSecrets }}
+      imagePullSecrets:
+        {{- toYaml .Values.global.image.pullSecrets | nindent 8 }}
       {{- end }}
       containers:
         - name: rapid-response
           image: {{ template "rapidResponse.image" . }}
-          imagePullPolicy: {{ .Values.rapidResponse.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.rapidResponse.image.pullPolicy | default .Values.global.image.pullPolicy }}
           resources:
 {{ toYaml .Values.rapidResponse.resources | indent 12 }}
           {{- if .Values.rapidResponse.securityContext }}
